# airpyllution

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  ci-cd.yml  deploy.yml  main.yml  release.yml
docs/: Makefile  conf.py  example.ipynb  make.bat  requirements.txt
src/AirPyllution/: AirPyllution.py  __init__.py  airpyllution.py
src/airpyllution/: __init__.py  airpyllution.py  utils.py
src/utils/: constants.py
tests/: constants.py  test_AirPyllution.py  test_airpyllution.py
