[tool.poetry]
name = "airpyllution"
version = "0.1.0"
description = "A package which  provides various functionalities on air pollution data."
authors = ["Christopher Alexander, Daniel King, Mel Liow"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.1"
pandas = "^1.3.5"
requests = "^2.27.1"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
