[tool.poetry]
name = "airpyllution"
version = "0.1.2"
description = "A package which  provides various functionalities on air pollution data."
authors = ["Christopher Alexander, Daniel King, Mel Liow"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
altair = "^4.2.0"
vega-datasets = "^0.9.0"
DateTime = "^4.3"
numpy = "^1.22.1"
pandas = "^1.3.5"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
responses = "^0.17.0"
plotly = "^5.5.0"
altair-viewer = "^0.4.0"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
