[tool.poetry]
name = "airpyllution"
version = "1.1.2"
description = "A package which  provides various functionalities on air pollution data."
authors = ["Christopher Alexander, Daniel King, Mel Liow"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
altair = "^4.2.0"
vega-datasets = "^0.9.0"
DateTime = "^4.3"
numpy = "^1.22.1"
pandas = "^1.3.5"
requests = "^2.27.1"
python-dotenv = "^0.19.2"
responses = "^0.17.0"
plotly = "^5.5.0"
altair-viewer = "^0.4.0"
mock = "^4.0.3"
black = "^21.12b0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
jupyter = "^1.0.0"
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
codecov = "^2.1.12"
flake8 = "^4.0.1"
python-semantic-release = "^7.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.semantic_release]
version_variable = "pyproject.toml:version" # version location
branch = "main"                             # branch to make releases of
changelog_file = "CHANGELOG.md"             # changelog file
build_command = "pip install poetry && poetry build"  # build dists
dist_path = "dist/"                         # where to put dists
upload_to_pypi = false                      # don't auto-upload to PyPI
remove_dist = false                         # don't remove dists
patch_without_tag = "true"                  # always bump version on CD, even without angular commit (default is patch)